# SK2_projekt

./: CMakeLists.txt  Client.cpp  Client.hpp  ClientWindow.cpp  ClientWindow.h  Makefile  Question.cpp  Question.hpp  README.md  Server.cpp  Server.hpp  User.cpp  User.hpp  UserConnection.cpp  UserConnection.hpp  client_connect.ui.autosave  cmake_install.cmake  kahut  main_app.cpp  mainwindow.ui  serverwindow.cpp  serverwindow.h  serverwindow.ui
